# ai-embedded-lab

./: .gitignore  .gitmodules  AEL_CONCEPTS.md  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  orchestrator.py
.claude/: settings.json
adapters/: build_cmake.py  build_idf.py  build_stm32.py  esp32s3_dev_c_meter_tcp.py  flash_bmda_gdbmi.py  flash_idf.py  instrument_aip_http.py  instrument_sim_http.py  observe_gpio_pin.py  observe_uart_log.py  preflight.py
ael/: __main__.py  adapter_registry.py  agent.py  assets.py  bench_profile_loader.py  bridge_server.py  bridge_task.py  check_eval.py  civilization_client.py  cli.py  config_resolver.py  connection_doctor.py  connection_metadata.py  connection_model.py  default_verification.py  doctor_checks.py  evidence.py  failure_recovery.py  gates.py  git_ops.py  hw_check.py  instrument_doctor.py  instrument_manifest.py  instrument_metadata.py  instrument_view.py  inventory.py  la_check.py  nightly.py  nightly_report.py  nl_parser.py  orchestrator.py  pack_loader.py  paths.py  pipeline.py  planner.py  probe_binding.py  queue.py  recovery_policy.py  reporting.py  resource_locks.py  (+13 more)
ael_controlplane/: __main__.py  agent.py  bench_regression.py  bridge_server.py  codex_driver.py  nightly.py  nightly_report.py  planner.py  reporting.py  review_pack.py  task_api.py
agents/: llm_fix_build.py  llm_fix_runtime.py
assets_golden/duts/rp2040_pico/internal_temp_mailbox_s3jtag/firmware/: CMakeLists.txt  main.c
assets_golden/duts/rp2040_pico/pwm_capture_s3jtag/firmware/: CMakeLists.txt  main.c  pico_sdk_import.cmake
assets_golden/duts/rp2040_pico/timer_led_blink_ctrl_s3jtag/firmware/: CMakeLists.txt  ael_mailbox.h  main.c
assets_golden/duts/rp2040_pico/uart_banner_s3jtag/firmware/: CMakeLists.txt  main.c  pico_uart_banner_s3jtag.elf  pico_uart_banner_s3jtag.uf2
configs/: bench.yaml  default_verification_setting.yaml  doctor_tools.json  esp32jtag.yaml  esp32jtag_notify.yaml  esp32jtag_rp2040.yaml  known_boards.yaml  mcu_family_profiles.yaml  notify_example.yaml
configs/firmware_templates/rp/: CMakeLists.txt  main.c
docs/: AEL_Civilization_Engine_V0_1_Spec.md  AI_USAGE_RULES.md  README.md  ael_architecture.md  ael_architecture_gaps_2026-03-20.md  ael_architecture_v0_1.md  ael_architecture_v0_1_diagram.md  ael_cli_reference_v0_1.md  ael_codex_task_list.md  ael_core_principles.md  ael_core_v0_1_boundary_contract.md  ael_core_v0_1_review.md  ael_design_principle.md  ael_execution_parallel_scheduling_architecture_2026-03-20.md  ael_experience_system_v0_1_memo_2026-03-22.md  ael_future_architecture_memo.md  ael_instrument_architecture_v0_2.md  ael_instrument_layer_v1_0.md  ael_instrument_migration_plan_v1.md  ael_instrument_protocol_v0_1.md  ael_instrument_spec_v1.md  ael_minimal_example.md  ael_one_pager.md  ael_paradigm_shift.md  ael_platform_blueprint_v0_1.md  ael_runtime_contract.md  ael_system_architecture.md  ael_terminology.md  ael_v1_roadmap.md  ael_v1_strategic_direction.md  ael_vs_vibe_coding.md  agent_answering_guide.md  agent_v0_7_nightly.md  ai_behavior_baseline_v1.md  ai_behavior_test_catalog.md  ail_instrument_guideline_v0_1.md  aip-0.1.json  architecture_checkpoint_review.md  architecture_map.md  architecture_principles.md  (+115 more)
experiments/: esp32c5_suite_ext.py  esp32c5_suite_ext2.py  esp32c5_suite_ext3.py  esp32c6_gpio_loopback.py  esp32c6_hw_suite.py  esp32c6_suite_ext.py
firmware/: CMakeLists.txt  main.c
firmware/targets/rp2040_pico_adc/: CMakeLists.txt  main.c
firmware/targets/rp2040_pico_i2c/: CMakeLists.txt  main.c
firmware/targets/rp2350_pico2/: CMakeLists.txt  main.c
firmware/targets/rp2350_pico2_uart/: CMakeLists.txt  main.c
firmware_esp32s3/: CMakeLists.txt
firmware_stm32/: Makefile  main.c
notifiers/: __init__.py  console.py  discord_webhook.py
packs/: esp32_wroom32d_full.json  esp32_wroom32d_full_suite.json  esp32_wroom32d_stage0.json  esp32_wroom32d_stage1.json  esp32_wroom32d_stage2.json  esp32c3_devkit_full.json  esp32c3_devkit_stage0.json  esp32c3_devkit_stage1.json  esp32c3_devkit_stage2.json  esp32c3_full_suite.json  esp32c5_devkit_full.json  esp32c5_full_suite.json  esp32c5_minimal_wiring.json  esp32c6_devkit_full.json  esp32c6_devkit_stage0.json  esp32c6_devkit_stage1.json  esp32c6_devkit_stage2.json  esp32jtag_firmware_smoke.json  esp32jtag_port_d_loopback.json  esp32meter1.json  esp32s3_devkit_full.json  esp32s3_full_suite.json  ezlink_dev.json  rp2040_s3jtag_full.json  rp2040_s3jtag_stage0.json  rp2040_s3jtag_stage1.json  rp2040_s3jtag_stage2.json  smoke.json  smoke_esp32c6.json  smoke_rp2040_s3jtag.json  smoke_stm32.json  smoke_stm32f103_gpio_loopbacks_base.json  smoke_stm32f103_gpio_loopbacks_esp32jtag.json  smoke_stm32f103_gpio_loopbacks_stlink.json  smoke_stm32f103c6_minimal.json  smoke_stm32f103rct6.json  smoke_stm32f103rct6_mailbox_base.json  smoke_stm32f103rct6_mailbox_esp32jtag.json  smoke_stm32f103rct6_mailbox_stlink.json  (+20 more)
(+1564 files in other folders)
